--- a/default.conf
+++ b/default.conf
@@ -10,4 +10,7 @@ server {
     location /api/v1/films {
         proxy_pass http://films:3000;
     }
+    location /api/v1/login {
+        proxy_pass http://films:3000;
+    }
 }
