--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ build/Release
 
 # Dependency directories
 node_modules/
+mobile_web/node_modules/
 jspm_packages/
 
 # TypeScript v1 declaration files
@@ -58,6 +59,8 @@ typings/
 .rts2_cache_cjs/
 .rts2_cache_es/
 .rts2_cache_umd/
+
+.expo
 
 # Optional REPL history
 .node_repl_history
@@ -102,3 +105,7 @@ dist
 
 # TernJS port file
 .tern-port
+
+
+# test folders
+web_native/
